# hashharness-pm

./: README.md  pyproject.toml
.codex/rules/: pm.rules
docs/: codex-integration.md
skills/pm/: README.md
skills/pm/assisted-skill-execution/: SKILL.md
skills/pm/auto-skill-execution/: SKILL.md
skills/pm/dashboard/: SKILL.md
skills/pm/execute/: SKILL.md
skills/pm/extract-steps/: SKILL.md
skills/pm/finished/: SKILL.md
skills/pm/guided-skill-execution/: SKILL.md
skills/pm/heartbeat/: SKILL.md
skills/pm/hooks/: README.md  session_start.sh
skills/pm/install/: SKILL.md
skills/pm/next/: SKILL.md
skills/pm/plan/: SKILL.md
skills/pm/reclaim/: SKILL.md
skills/pm/replan/: SKILL.md
skills/pm/scripts/: bulk_plan.py  codex_pm.sh  context_id.py  dashboard.py  executing.py  extract_skill_steps.sh  finished.py  heartbeat.py  install_hashharness.sh  next.py  owned.py  pm  pm_owned_check.sh  pull.py  replan.py  report.py  store.py
system-models/: README.md  check_enforcement.py  enforcement.yaml  planning.dfy  planning_cancel_cascade.als  planning_cancel_cascade.dfy  planning_isolation.als  planning_lease.als  planning_lease.dfy  planning_parent_gate.als  planning_reclaim_cascade.als  planning_reclaim_cascade.dfy  planning_replan.als  planning_replan.dfy  planning_sticky_rebinding.als
system-models/reports/: alloy-dafny-reconciliation.md  planning-enforcement.md  planning-reconciliation.md  proposal-enforcement-map-for-formal-modeling-skill.md
tests/integration/: test_golden.py
tests/stress/: test_claim_race.py  test_pull_starve.py
(+2 files in other folders)
